tests/baselines/reference/parserCommaInTypeMemberList2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList2.ts (8 errors) ====
    var s = $.extend< { workItem: any }, { workItem: any, width: string }>({ workItem: this._workItem }, {});
                                         ~
!!! error TS1134: Variable declaration expected.
                                                               ~
!!! error TS1005: ';' expected.
                                                                         ~
!!! error TS1128: Declaration or statement expected.
            ~
!!! error TS2304: Cannot find name '$'.
                                  ~~~
!!! error TS2304: Cannot find name 'any'.
                                                     ~~~
!!! error TS2304: Cannot find name 'any'.
                                                          ~~~~~
!!! error TS2304: Cannot find name 'width'.
                                                                 ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    